--- a/main.html
+++ b/main.html
@@ -8,8 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
+
+	<div class="container">
+        <div class="circle red"></div>
+        <div class="circle green"></div>
+        <div class="circle yellow"></div>
+    </div>
 
 </body>
 
